[package]
name = "anyrun-op"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4.0"
fuzzy-matcher = "0.3.7"
ron = "0.8.0"
